# ai-principles

./: .gitignore  astro.config.mjs  dezhou.rar  mdm-org.rar  package-lock.json  package.json  tailwind.config.mjs
2026-02-14 AgentRuntime/: BACKGROUND.md  CLAUDE.md
2026-02-27-AI原理科普/: CLAUDE.md  tsconfig.json
claude-agent-desktop-mogai/: .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP_TEST_CASES.md  QUICK_TEST_COMMANDS.md  README.md  docker-compose.yml  pytest.ini  requirements-test.txt  test_mcp_demo.py
dezhou/: README.md  create_player_avatars.py  download_image_from_url.py  download_images.py  download_images_pixabay.py  download_poker_images.py  fix.js  fixAI.js  index.html  poker_player_images.md  temp.txt  tmp.js
dezhou1.1/: index.html  index.html.bak  index_original.html  shenzhen_travel_guide.html  (+1 more)
dezhou1.1-trae/: index.html
financial-analysis/: README.md  beautiful_app.py  pyproject.toml  requirements.txt  run.py
financial-analysis/.cursor/rules/: document.mdc  general.mdc  git.mdc  python.mdc
financial-analysis/docs/: 2.提示词.md  3.Excel表格结构识别优化.md
financial-analysis/financial_analysis/: __init__.py  __main__.py  logger.py  main.py
financial-analysis/financial_analysis/processors/: __init__.py  data_validator.py  excel_capture_logger.py  excel_processor.py  field_mapper.py  report_generator.py  table_analyzer.py  template_store.py
financial-analysis/ref/: JV损益表.csv  JV损益表.xlsx  JV资产负债表.csv  JV资产负债表.xlsx  财务分析报告.docx  财务分析报告_JV.docx
financial-analysis/templates/: balance_sheet_templates.json  income_statement_templates.json
(+193 files in other folders)
